...
        let alert = UIAlertController(title: alertData.title, message: alertData.message, preferredStyle: .alert)
        func handler(_: UIAlertAction) {
            alertData.completion()
        }
        let action = UIAlertAction(title: alertData.buttonText, style: .default, handler: handler)
        alert.addAction(action)
        alert.view.accessibilityIdentifier = "Alert"
        DispatchQueue.main.async { [weak self] in
            self?.present(alert, animated: true, completion: nil)
        }
    }
}

